<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLogActivity">

    <ScrollView
        android:id="@+id/scrollViewAddLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow>

                    <TextView
                        android:id="@+id/text_addLog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="monospace"
                        android:text="@string/add_log"
                        android:textAlignment="center"
                        android:textSize="30sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/text_current_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_access_time_black_24dp"
                        android:padding="5dp"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="@+id/scrollViewAddLog"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_glucose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/glucose_level" />

                    <TextView android:layout_weight="10" />

                    <EditText
                        android:id="@+id/input_glucose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/glucose"
                        android:ems="10"
                        android:hint="@string/unit_glucose"
                        android:inputType="numberDecimal"
                        tools:targetApi="o" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_bp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/blood_pressure" />

                    <TextView android:layout_weight="10" />

                    <EditText
                        android:id="@+id/input_bp"
                        android:layout_width="179dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/unit_blood"
                        android:inputType="numberDecimal"
                        tools:targetApi="o" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_meal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/meal" />

                    <TextView android:layout_weight="10" />

                    <Spinner
                        android:id="@+id/spinner_meal"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="8dp"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/condition" />

                    <TextView android:layout_weight="10" />

                    <Spinner
                        android:id="@+id/spinner_condition"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="8dp"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/add"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>