<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:id="@+id/list_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp">

        <TextView
            android:id="@+id/list_babyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_babyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/baby_type" />

                <TextView
                    android:layout_weight="10"
                    />

                <TextView
                    android:id="@+id/list_babyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_marginTop="4dp"
                    android:text="@string/baby_type" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_babyMom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/diamom" />

                <TextView
                    android:layout_weight="10"
                    />

                <TextView
                    android:id="@+id/list_babyMom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_marginTop="4dp"
                    android:text="@string/diamom" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_babyStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/baby_hypo" />

                <TextView
                    android:layout_weight="10"
                    />

                <TextView
                    android:id="@+id/list_babyStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_marginTop="4dp"
                    android:text="@string/baby_hypo" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>