<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMealActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="164dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E1E1E1"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:contentDescription="@string/date"
                    app:srcCompat="@drawable/ic_date_range_black_24dp" />

                <EditText
                    android:id="@+id/input_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".75"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/date"
                    android:inputType="date"
                    tools:targetApi="o" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E1E1E1"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/breakfast" />

                <EditText
                    android:id="@+id/input_breakfast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".75"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext"
                    android:inputType="text"
                    android:labelFor="@+id/input_lunch"
                    tools:targetApi="o" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E1E1E1"
                android:labelFor="@+id/input_breakfast"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/lunch" />

                <EditText
                    android:id="@+id/input_lunch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".75"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext"
                    android:inputType="text"
                    tools:targetApi="o" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E1E1E1"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/dinner" />

                <EditText
                    android:id="@+id/input_dinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".75"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext"
                    android:inputType="text"
                    tools:targetApi="o" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="294dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>